/* pwkm note:    Although we can query across from FSPECIMEN to FPROTOCOL_CONSENT,    We do not and should not have a physical implementation of a FK.    Because the FK relationship would have a false impression that each sample can only have one protocol consent.    So I am taking these two FKs out. */

--- a/ofbm/ofbm.asciidoc
+++ b/ofbm/ofbm.asciidoc
@@ -1,10 +1,18 @@
-////
-Comments
-:Author: Peter Mo
+//////////////////////////////////////////
+Comment Block
+:Author: Peter Mo and BMIC Team
 :Email: peter.mo@utah.edu
 :Date: 20140206
 :Revision: 1.0
-////
+
+To create the html file:
+1) change into your asciidoc directory
+For example:
+cd c:\Apps\asciidoc
+2) Compile the doc into html with a table of contents
+For example:
+python asciidoc.py -a toc C:\Apps\further-open-db\ofbm\ofbm.asciidoc
+//////////////////////////////////////////
 
 = OpenFurther Biospecimen Model Documentation
 
